syntax = "proto3";

package feed;

service FeedService {
  rpc CreatePost(CreatePostRequest) returns (PostResponse);
  rpc GetPost(GetPostRequest) returns (PostResponse);
  rpc GetUserPosts(GetUserPostsRequest) returns (PostsResponse);
  rpc GetNearbyPosts(GetNearbyPostsRequest) returns (PostsResponse);
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc LikePost(LikePostRequest) returns (LikePostResponse);
  rpc UnlikePost(UnlikePostRequest) returns (UnlikePostResponse);
}

message CreatePostRequest {
  int32 user_id = 1;
  string content = 2;
  double latitude = 3;
  double longitude = 4;
  string location_name = 5;
}

message GetPostRequest {
  int32 post_id = 1;
}

message GetUserPostsRequest {
  int32 user_id = 1;
}

message GetNearbyPostsRequest {
  double latitude = 1;
  double longitude = 2;
  double radius_km = 3;
}

message UpdatePostRequest {
  int32 post_id = 1;
  string content = 2;
  optional double latitude = 3;
  optional double longitude = 4;
  optional string location_name = 5;
}

message DeletePostRequest {
  int32 post_id = 1;
}

message LikePostRequest {
  int32 post_id = 1;
  int32 user_id = 2;
}

message UnlikePostRequest {
  int32 post_id = 1;
  int32 user_id = 2;
}

message PostResponse {
  int32 id = 1;
  int32 user_id = 2;
  string content = 3;
  double latitude = 4;
  double longitude = 5;
  string location_name = 6;
  int32 likes_count = 7;
  int32 comments_count = 8;
  string created_at = 9;
  string updated_at = 10;
}

message PostsResponse {
  repeated PostResponse posts = 1;
}

message DeletePostResponse {
  bool success = 1;
}

message LikePostResponse {
  bool success = 1;
  int32 likes_count = 2;
}

message UnlikePostResponse {
  bool success = 1;
  int32 likes_count = 2;
} 